# iliad_distribution

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
cliffmaps/: robotlab_pedsim_point5.xml
config/calibration/: robot2.yaml  robot5_sim.yaml  save_calibration.py
config/certs/: iliad.crt  iliad.key
config/demos/: demo_oru_basement_point_and_click_with_coordination.rviz  demo_oru_basement_point_and_click_with_coordination.yaml  ncfm-MS2-coordination.yaml  ncfm-MS2-sim.rviz  ncfm-MS2-sim.yaml  ncfm-UOL.rviz  ncfm-ijcai.yaml  ncfm-uol-sim.rviz  ncfm-uol-sim.yaml  ncfm-uol.yaml  ncfm.yaml  oru-lab.rviz  oru-lab.yaml  robot-lab.rviz
config/get_path_services/: iliad_smp_costmap.yml  iliad_smp_costmap_bt.yml  iliad_smp_planner.yml  iliad_smp_planner_bt.yml
config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/move_base/dwa/: dwa_planner_ros.yaml
config/perception/: kinect2_nodelet_resize.yaml
config/robots/: bt.yaml  bt_sim.yaml  cititruck.yaml  cititruck_sim.yaml  robot1.yaml  robot1_sim.yaml  robot2.yaml  robot2_sim.yaml  robot3.yaml  robot4.yaml  robot4_sim.yaml  robot4_sim_uol.yaml  robot5.yaml  robot5_sim.yaml  robot6.yaml
debian/: changelog  control  gbp.conf  rules
iliad_distribution/: CHANGELOG.rst  package.xml
iliad_launch_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
iliad_launch_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
iliad_launch_system/: CHANGELOG.rst  CMakeLists.txt  package.xml
iliad_restricted/: CHANGELOG.rst  CMakeLists.txt  package.xml
launch/: load_params.launch  static_transforms.launch  system_base.launch
launch/demos/ncfm-MS2-coordination/: ncfm-MS2-coordination_spawn.launch
launch/demos/ncfm-MS2-sim/: ncfm-MS2-sim_spawn.launch
launch/demos/ncfm-uol-sim/: ncfm-uol-sim_spawn.launch
launch/demos/oru_basement_point_and_click_with_coordination/: demo_oru_basement_point_and_click_with_coordination.launch  demo_oru_basement_point_and_click_with_coordination_rosparams.launch  demo_oru_basement_point_and_click_with_coordination_spawn.launch
launch/robots/: deltatvec_service.launch  fork_control.launch  get_path_service.launch  get_path_service_hierarchical.launch  kinect2.launch  kinect2_simulation.launch  kmo_navserver.launch  lasers.launch  localization.launch  openni2_tf_prefix.launch  pallet_detection.launch  pallet_sensor.launch  polygonconstraint_service.launch  record_all_sensors.launch  reflex_camera.launch  robot_bringup.launch  robot_spawn.launch  s3000_laser.launch  smoothed_path_service.launch  smoothed_straight_service.launch  vehicle_execution_client.launch  vehicle_execution_node.launch  velodyne.launch
launch/robots/bt/: bt_bringup.launch  bt_description.launch
launch/robots/cititruck/: cititruck.launch  cititruck_bringup.launch  cititruck_description.launch  cititruck_fork_control.launch  cititruck_pallet_detection.launch  cititruck_software.launch  cititruck_spawn.launch
launch/robots/cititruck/robot1/: robot1.launch
launch/robots/cititruck/robot2/: robot2.launch
launch/robots/cititruck/robot4/: robot4.launch
launch/robots/cititruck/robot5/: robot5.launch
launch/sites/: iliad_cliffmap_server.launch  iliad_map_server.launch  oru_basement.launch
launch/subsystems/coordination/: coordination-scripted.launch  coordination.launch  multimaster.launch  robot_websocket_adapter.launch  robot_websocket_adapter_uol.launch  rosbridge_websockets.launch
launch/subsystems/navigation/: move_base_dwa.launch  topological_map_manager_central.launch  topological_navigation_robot.launch
launch/subsystems/perception/: person_tracking_bt_truck.launch
maps/: cliff_ncfm_aisle_025.xml  ncfm_aisle_025_graph.xml  ncfm_triangle_05_graph.xml  oru_lab.yaml  robot-lab-gmap.pgm  robot-lab-gmap.yaml  robot_lab_real.yaml
scripts/: kill-bt-sensors.sh  kill-coordinator.sh  kill-robot.sh  kill-sensors.sh  start-bt-sensors.sh
scripts/ijcai/: start-ijcai-coordinator.sh  start-ijcai-robot4.sh  start-ijcai-robot5.sh
scripts/ncfm/: start-ncfm-coordinator.sh  start-ncfm-robot.sh
scripts/ncfm-MS2-coordination/: kill-ncfm-MS2-coordination.sh  kill-ncfm-MS2-robot4.sh  ncfm-MS2-killall.sh  ncfm-MS2-runall.sh  start-ncfm-MS2-coordination.sh  start-ncfm-MS2-robot4.sh  start-ncfm-MS2-robot5.sh
scripts/ncfm-UOL/: kill-ncfm-UOL-robot5.sh  kill-ncfm-UOL-sensors.sh  kill-ncfm-UOL-teleop.sh  start-ncfm-UOL-coordination.sh  start-ncfm-UOL-robot.sh  start-ncfm-UOL-sensors.sh  start-ncfm-UOL-teleop.sh
scripts/oru-lab/: start-oru-lab-coordinator.sh  start-oru-lab-sensors.sh
tmule/: .iliadrc  bt-orkla.sh  iliad-bt.yaml  iliad-coordinator-scripted.yaml  iliad-coordinator.yaml  iliad-robot-minimal.yaml  iliad-robot-sensors.yaml  iliad-robot.yaml  iliad-setup.sh  ncfm-MS2-coordination.sh  ncfm-MS2-sim.sh  ncfm-UOL-robot5.sh  ncfm-UOL.sh  ncfm-ijcai.sh  ncfm-uol-sim.sh  ncfm.sh  oru-lab.sh  robot1.sh  robot2.sh  robot3.sh  robot4.sh  robot5.sh  robot6.sh  simple_sim.yaml
