<?xml version="1.0"?>
<package>
  <name>iliad_distribution</name>
  <version>0.0.4</version>
  <description>A meta package for the entire ILIAD distribution</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>


  <url type="website">http://iliad-project.eu/</url>



  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>navigation_oru</run_depend>
  <run_depend>spencer_people_tracking_full</run_depend>
  <run_depend>frongoweb</run_depend>
  <run_depend>frongo</run_depend>
  <run_depend>frongoweb</run_depend>
  <run_depend>hrsi_velocity_costmaps</run_depend>
  <run_depend>hrsi_launch</run_depend>

  <export>
   <metapackage />
 </export>
</package>
