<?xml version="1.0"?>
<package>
  <name>iliad_distribution</name>
  <version>0.0.8</version>
  <description>A meta package for the entire ILIAD distribution</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>


  <url type="website">http://iliad-project.eu/</url>



  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iliad_launch_manipulation</run_depend>
  <run_depend>iliad_launch_navigation</run_depend>
  <run_depend>iliad_launch_system</run_depend>
  <run_depend>frongo</run_depend>
  <run_depend>iliad_executive</run_depend>
  <run_depend>iliad_topological</run_depend>

  <export>
   <metapackage />
 </export>
</package>
