<?xml version="1.0"?>
<package format="2">
  <name>iliad_launch_navigation</name>
  <version>0.0.7</version>
  <description>The iliad_launch_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/iliad_launch_navigation</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>coordination_oru_ros</build_depend>
  <build_depend>iliad_human_perception_launch</build_depend>
  <build_depend>iliad_smp_global_planner</build_depend>
  <build_depend>iliad_topological</build_depend>
  <build_depend>kmo_cpi_interface</build_depend>
  <build_depend>kmo_fork_control</build_depend>
  <build_depend>kmo_navserver</build_depend>
  <build_depend>navigation_oru</build_depend>
  <build_depend>spencer_people_tracking_full</build_depend>
  <build_depend>velodyne</build_depend>
  <build_export_depend>coordination_oru_ros</build_export_depend>
  <build_export_depend>iliad_human_perception_launch</build_export_depend>
  <build_export_depend>iliad_smp_global_planner</build_export_depend>
  <build_export_depend>iliad_topological</build_export_depend>
  <build_export_depend>kmo_cpi_interface</build_export_depend>
  <build_export_depend>kmo_fork_control</build_export_depend>
  <build_export_depend>kmo_navserver</build_export_depend>
  <build_export_depend>navigation_oru</build_export_depend>
  <build_export_depend>spencer_people_tracking_full</build_export_depend>
  <build_export_depend>velodyne</build_export_depend>
  <exec_depend>coordination_oru_ros</exec_depend>
  <exec_depend>iliad_human_perception_launch</exec_depend>
  <exec_depend>iliad_smp_global_planner</exec_depend>
  <exec_depend>iliad_topological</exec_depend>
  <exec_depend>kmo_cpi_interface</exec_depend>
  <exec_depend>kmo_fork_control</exec_depend>
  <exec_depend>kmo_navserver</exec_depend>
  <exec_depend>navigation_oru</exec_depend>
  <exec_depend>spencer_people_tracking_full</exec_depend>
  <exec_depend>velodyne</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
