<?xml version="1.0"?>
<package>
  <name>iliad_restricted</name>
  <version>0.0.8</version>
  <description>A meta package for the restricted ILIAD distribution</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>


  <url type="website">http://iliad-project.eu/</url>



  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iliad_distribution</run_depend>
  <run_depend>iliad_smp_global_planner</run_depend>
  <run_depend>iliad_human_perception_launch</run_depend>
  <export>
   <metapackage />
 </export>
</package>
